--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1215,6 +1215,12 @@ outline-width: 0;
 	width: 94%!important;
 }
 
+@media (max-width: 512px) {
+	.shapka button{
+		padding:6px 10px;
+	}
+}
+
 
 
 
