--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1284,3 +1284,12 @@ a:focus{
 .Password__strength-meter:after, .Password__strength-meter:before{
 	border-color: #121212!important;
 }
+
+
+input[type="text"]{
+	font-size: 16px!important;
+}
+
+input[type="password"]{
+	font-size: 16px!important;
+}
